# practicaFinalML2

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt
docs/: arquitectura.md
scripts/: reindex.py
src/: chunking.py  cli.py  config.py  ingest.py  llm_client.py  loaders.py  mcp_server.py  rag.py  vectorstore.py
tests/: test_unit.py
