[project]
name = "apuntes-aau2-mcp"
version = "0.1.0"
description = "Servidor MCP con RAG sobre apuntes de Aprendizaje Automático 2"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]
